--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Raj Kapadia",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^3.2.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "google-auth-library": "^5.2.0",
     "googleapis": "^42.0.0"
   }
 }
